# Orchestrator

./: .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.in  OPERATIONAL_TRUTH.md  Orchestrator.Agent.md  Orchestrator.md  README.md  RTKP-README.md  log_cycle.json  package_orchestrator.py  pytest.ini  requirements-dev.txt  rtk-rewrite.json  rtkp.ps1  setup.cfg  setup_orchestrator.ps1
.github/: copilot-instructions.md
docs/: post-hook-integration.md
hooks/: log_cycle.json  log_hooks.py  test_cycle_telemetry.py  test_health_monitor.py  test_logging_cleanup.py  test_model_discovery.py  test_prompt_mappings.py  test_run_preview.py  test_synthesize_capture_output.py  test_synthesize_prune_logs.py  test_synthesize_run_visibility.py  test_workflow_state_machine.py
orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
prompts/: behavior.prompt.md  cleanup.prompt.md  debug.prompt.md  info.prompt.md  patterns-log.prompt.md  refresh-model.prompt.md  runbook.prompt.md  warning.prompt.md
rules/: Comment.Policy.md  Core.Identity.md  Logging.Policy.md  Markdown.Policy.md  Markdown.Rule.md  Model.Policy.md  Policy.Precedence.md  Quality.Policy.md  Routing.Policy.md  Runtime.Budget.md  Workflow.Policy.md  Workspace.Policy.md
scripts/: analyze_logs.py  continuation_detector.py  continuation_planner.py  handle_request.py  lint_wiki.py  log_hook_runner.py  log_prompt.py  normalize_log_links.py  post_chat_hook.py  prompt_registry.py  refresh_model_catalog.py  synthesize_wiki.py  test_copy_config.ps1  test_dedupe.py  validate_prompt_mappings.py
src/: __init__.py  (+10 more)
(+101 files in other folders)
