[metadata]
name = orchestrator
version = 0.1.0
description = Orchestrator agent for dispatching subagents and managing workflows
long_description = file: README.md
long_description_content_type = text/markdown
author = Orchestrator Maintainers
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
py_modules = package_orchestrator
include_package_data = True
install_requires =
python_requires = >=3.8

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    orchestrator-handle-request = scripts.handle_request:main
    orchestrator-package = package_orchestrator:main
